@@ -16,6 +16,9 @@ CHANGES - Current Version:
 - Added Visual Studio Project files in contrib/vcproj, contributed by 
   Tony Wells (bug 1877)
 
+- Updated contrib/mitab_dyn.pas for new 1.7.0 object types
+
+
 Version 1.7.0-beta1 (2007-02-29)
 --------------------------------
 
@@ -877,5 +880,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.207.2.1 2008-04-21 18:43:44 dmorissette Exp $
+$Id: HISTORY.TXT,v 1.207.2.2 2008-04-21 19:11:31 dmorissette Exp $
 ------------
